test/fixtures/fail/number_float_exp_plus_f.l4gs.g
; Float: exponent and `f` suffix are mutually exclusive.
        dq 1.0e5f
